# CompMath

./: CMakeLists.txt  CompMath.cpp
differentiation/: 1  2  TestProg.cpp  differentiation.hpp  exp_1_3.txt  exp_1_4.txt  exp_1_5.txt  exp_1_5_abs.txt
source/: CMakeLists.txt  HopfGodunov.py  RungeKutta.hpp  differentiation.hpp  integration.hpp  interpolation.hpp  nonlinear.hpp  parabolic.py  spline.hpp  ugolok_ vendroff.py
source/differentiation/: TestProg.cpp  differentiation.hpp  exp_1_3_abs.txt  exp_1_4_abs.txt
tests/: CMakeLists.txt  differentiation_test.cpp  integrationTest.cpp  interpolationTest.cpp  nonlinearTest.cpp  tridiagonalTest.cpp
tests/mainFiles/: CompMath.cpp
tests/mainFiles/RungeKutta/: RungekuttaCode.txt  task1.txt  test.txt
tests/mainFiles/differentiation/: diif_code.txt  exp_1_3.txt  exp_1_4.txt  exp_1_5.txt  exp_2_3.txt  exp_2_4.txt  exp_2_5.txt
tests/mainFiles/integrating/: func_3.txt  func_5.txt  integrCode.txt  sin_4.txt  sin_5.txt
tests/mainFiles/interpolation/: exp_3_cheb.txt  exp_3_herm.txt  exp_3_norm.txt  exp_6_cheb.txt  exp_6_herm.txt  exp_6_norm.txt  intCode.txt
tests/mainFiles/nonlinear/: kepler1.txt  kepler2.txt  kepler5.txt  kepler8.txt  nonlinCode.txt
tests/mainFiles/spline/: exp_spline.txt  exp_spline_n_5.txt  exp_spline_otn.txt  exp_spline_otn_.txt  sin_spline_otn.txt  splineCode.txt
